--- a/AnimeStore/src/main/resources/templates/login.html
+++ b/AnimeStore/src/main/resources/templates/login.html
@@ -8,10 +8,10 @@ layout:decorate="layouts/defaultTemplate">
 <body>
 	<div layout:fragment="content">
 	<!-- <h2 th:text="${message}">Default text</h2> -->
-		<form action ="#" th:action="@{doLogin}" th:object="${loginModel}" method="post">
+		<form action ="#" th:action="@{/login/doLogin}" th:object="${loginModel}" method="post">
 			<table>
 				<tr>
-					<td>User Name:</td><td><input type="text" th:field="*{username}"></td>
+					<td>Username:</td><td><input type="text" th:field="*{username}"></td>
 					<td><h5 style="color:red" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">User Name Error</h5></td>
 				</tr>
 				<tr>
