--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+	<!-- fragment that gets replaced-->
 	<div layout:fragment="content">
 		<h2 th:text="${message}">This is default text</h2><br/>
 		<h2 th:text="${message2}">This is more default text</h2><br/>
