--- a/src/main/resources/templates/layouts/common.html
+++ b/src/main/resources/templates/layouts/common.html
@@ -18,7 +18,7 @@
                   <span class ="icon-bar"></span>
                   <span class ="icon-bar"></span>
                </button>
-               <a href="#"  style="padding: 10px;" class="navbar-brand"><img style="width: 30px;" th:src="@{/images/anime-logo.jpg}"> </a>
+               <a href="/"  style="padding: 10px;" class="navbar-brand"><img style="width: 30px;" th:src="@{/images/anime-logo.jpg}"> </a>
            </div>
            <div id="navbarCollapse" class="collapse navbar-collapse">
                <ul class="nav navbar-nav">
