--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -9,8 +9,10 @@
 	<table style="width:50%">
 		<thead>
 			<tr>
-				<th style="text-align:center">Product Name</th>
-				<th style="text-align:center">Price</th>
+				<th style="text-align:center">ID</th>
+				<th style="text-align:center">Product ID</th>
+				<th style="text-align:center">Customer Name</th>
+				<th style="text-align:center">Total</th>
 				<th style="text-align:center">Quantity</th>
 			<th>
 		</thead>
@@ -19,8 +21,10 @@
 				<td style="text-align:center" colspan="4">No Orders Available</td>
 			</tr>
 			<tr th:each="order : ${orders}">
-				<td style="text-align:center"><h5 th:text="${order.productName}">Product 1</h5></td>
-				<td style="text-align:center"><h5 th:text="${order.price}">1.00</h5></td>
+				<td style="text-align:center"><h5 th:text="${order.id}">Product 1</h5></td>
+				<td style="text-align:center"><h5 th:text="${order.productId}">Product 1</h5></td>
+				<td style="text-align:center"><h5 th:text="${order.customerName}">Product 1</h5></td>
+				<td style="text-align:center"><h5 th:text="${order.total}">1.00</h5></td>
 				<td style="text-align:center"><h5 th:text="${order.quantity}">1</h5></td>
 			</tr>
 		</tbody>
