--- a/src/main/resources/templates/layouts/common.html
+++ b/src/main/resources/templates/layouts/common.html
@@ -23,7 +23,7 @@
            <div id="navbarCollapse" class="collapse navbar-collapse">
                <ul class="nav navbar-nav">
                   <li><a th:href="@{/}">Home</a></li>
-                  <li><a th:href="@{/addproduct}">Products</a></li>
+                  <li><a th:href="@{/addProduct}">Products</a></li>
                   <li><a href="https://weebstuff.com/collections/anime-merchandise" target="_blank">Shop</a></li>
                   <li><a href="https://www.crunchyroll.com/lineup" target="_blank">News and Events</a></li>
                </ul>
