--- a/src/main/resources/templates/newProduct.html
+++ b/src/main/resources/templates/newProduct.html
@@ -27,6 +27,26 @@
 			</tr>
 		</tbody>
 	</table>
+	<br/>
+	<form action ="#" th:action="@{/addProduct/product}" th:object="${productModel}" method="post">
+			<table>
+				<tr>
+					<td>ID :</td><td><input type="text"></td>
+				</tr>
+				<tr>
+					<td>Product Name :</td><td><input type="text"></td>
+				</tr>
+				<tr>
+					<td>Price :</td><td><input type="text"></td>
+				</tr>
+				<tr>
+					<td>Quantity :</td><td><input type="text"></td>
+				</tr>
+				<tr>
+					<td colspan="3"><input type="submit" value="Submit"></td>
+				</tr>
+			</table>
+	</form>
 </div>
 </body>
 </html>
