--- a/src/main/resources/templates/newProduct.html
+++ b/src/main/resources/templates/newProduct.html
@@ -28,24 +28,32 @@
 		</tbody>
 	</table>
 	<br/>
-	<form action ="#" th:action="@{/addProduct/product}" th:object="${productModel}" method="post">
+	<form action ="#" th:action="@{/addProduct}" th:object="${productModel}" method="post">
 			<table>
 				<tr>
-					<td>ID :</td><td><input type="text"></td>
+					<td>ID :</td><td><input type="text" th:field="*{id}"></td>
+					<td><h5 style="color:red" th:if="${#fields.hasErrors('id')}" th:errors="*{id}">ID Error</h5></td>
 				</tr>
 				<tr>
-					<td>Product Name :</td><td><input type="text"></td>
+					<td>Product Name :</td><td><input type="text" th:field="*{productName}"></td>
+					<td><h5 style="color:red" th:if="${#fields.hasErrors('productName')}" th:errors="*{productName}">Product Name Error</h5></td>
 				</tr>
 				<tr>
-					<td>Price :</td><td><input type="text"></td>
+					<td>Price :</td><td><input type="text" th:field="*{price}"></td>
+					<td><h5 style="color:red" th:if="${#fields.hasErrors('price')}" th:errors="*{price}">Price Error</h5></td>
 				</tr>
 				<tr>
-					<td>Quantity :</td><td><input type="text"></td>
+					<td>Quantity :</td><td><input type="text" th:field="*{quantity}"></td>
+					<td><h5 style="color:red" th:if="${#fields.hasErrors('quantity')}" th:errors="*{quantity}">Quantity Error</h5></td>
 				</tr>
 				<tr>
 					<td colspan="3"><input type="submit" value="Submit"></td>
 				</tr>
 			</table>
+			<div th:if="${#fields.hasErrors('*')}">List of Errors</div>
+			<div th:each="err : ${#fields.errors('*')}">
+				<span style="color:red" th:text="${err}" class="fieldError"></span>
+			</div>
 	</form>
 </div>
 </body>
