--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -7,7 +7,6 @@ layout:decorate="layouts/defaultTemplate">
 </head>
 <body>
 	<div layout:fragment="content">
-	<!-- <h2 th:text="${message}">Default text</h2> -->
 		<form action ="#" th:action="@{doRegister}" th:object="${registerModel}" method="post">
 			<table>
 				<tr>
@@ -19,12 +18,12 @@ layout:decorate="layouts/defaultTemplate">
 					<td><h5 style="color:red" th:if="${#fields.hasErrors('lastname')}" th:errors="*{lastname}">Last Name Error</h5></td>
 				</tr>
 				<tr>
-					<td>Username:</td><td><input type="text" th:field="*{login}"></td>
-					<td><h5 style="color:red" th:if="${#fields.hasErrors('login')}" th:errors="*{login}">User Name Error</h5></td>
+					<td>Username:</td><td><input type="text" th:field="*{username}"></td>
+					<td><h5 style="color:red" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">User Name Error</h5></td>
 				</tr>
 				<tr>
-					<td>Password :</td><td><input type="password" th:field="*{login}"></td>
-					<td><h5 style="color:red" th:if="${#fields.hasErrors('login')}" th:errors="*{login}">Password Error</h5></td>
+					<td>Password :</td><td><input type="password" th:field="*{password}"></td>
+					<td><h5 style="color:red" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Password Error</h5></td>
 				</tr>
 				<tr>
 					<td>Email :</td><td><input type="email" th:field="*{email}"></td>
