--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -7,7 +7,7 @@ layout:decorate="layouts/defaultTemplate">
 </head>
 <body>
 	<div layout:fragment="content">
-		<form action ="#" th:action="@{doRegister}" th:object="${registerModel}" method="post">
+		<form action ="#" th:action="@{doRegister}" th:object="${userModel}" method="post">
 			<table>
 				<tr>
 					<td>First Name:</td><td><input type="text" th:field="*{firstname}"></td>
