--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,7 +7,7 @@ layout:decorate="layouts/defaultTemplate">
 </head>
 <body>
 	<div layout:fragment="content">
-		<form action ="#" th:action="@{/login/doLogin}" th:object="${userModel}" method="post">
+		<form action ="#" th:action="@{/login/doLogin}" th:object="${credentialsModel}" method="post">
 			<table>
 				<tr>
 					<td>Username:</td><td><input type="text" th:field="*{username}"></td>
