--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -5,7 +5,9 @@
 <title>My Products</title>
 </head>
 <body>
-<div layout:fragment="content">
+<!--need to add row of buttons for update delete and ad products-->
+<a th:href="@{/enterProduct}">Add Products</a>
+<div yout:fragment="content">
 	<table style="width:50%">
 		<thead>
 			<tr>
@@ -28,8 +30,6 @@
 		</tbody>
 	</table>
 	<br/>
-	<a th:href="@{/enterProduct}">Add Products</a>
 </div>
-
 </body>
 </html>
