implemented update product page

--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -9,8 +9,9 @@
 
 <body>
 	<div layout:fragment="content">
-		<!--need to add row of buttons for update delete and ad products-->
 		<a th:href="@{/enterProduct}">Add Products</a>
+		<a th:href="@{/updateProduct}">Update Product</a>
+		<a th:href="@{/deleteProduct}">Delete Product</a>
 		<table style="width:50%">
 			<thead>
 				<tr>
