--- a/src/main/resources/templates/updateProduct.html
+++ b/src/main/resources/templates/updateProduct.html
@@ -9,11 +9,11 @@
 
 <body>
 	<div layout:fragment="content">
-		<form action="#" th:action="@{/addProduct}" th:object="${productModel}" method="post">
+		<form action="#" th:action="@{/doUpdateProduct}" th:object="${productModel}" method="post">
 			<table>
 				<tr>
 					<td>Product ID :</td>
-					<td><input type="text" th:field="*{id}}"></td>
+					<td><input type="text" th:field="*{id}"></td>
 					<td>
 						<h5 style="color:red" th:if="${#fields.hasErrors('id')}" th:errors="*{id}">
 							Product ID Error</h5>
