--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -23,7 +23,7 @@
 			<tr th:each="order : ${orders}">
 				<td style="text-align:center"><h5 th:text="${order.id}">Product 1</h5></td>
 				<td style="text-align:center"><h5 th:text="${order.productId}">Product 1</h5></td>
-				<td style="text-align:center"><h5 th:text="${order.customerName}">Product 1</h5></td>
+				<td style="text-align:center"><h5 th:text="${order.userId}">Product 1</h5></td>
 				<td style="text-align:center"><h5 th:text="${order.total}">1.00</h5></td>
 				<td style="text-align:center"><h5 th:text="${order.quantity}">1</h5></td>
 			</tr>
