--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,22 +5,26 @@ layout:decorate="layouts/defaultTemplate">
 <meta charset="ISO-8859-1">
 <title>Login Page</title>
 </head>
-<body>
-	<div layout:fragment="content">
-		<form action ="#" th:action="@{/login/doLogin}" th:object="${credentialsModel}" method="post">
-			<table>
-				<tr>
-					<td>Username:</td><td><input type="text" th:field="*{username}"></td>
-					<td><h5 style="color:red" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">User Name Error</h5></td>
-				</tr>
-				<tr>
-					<td>Password :</td><td><input type="password" th:field="*{password}"></td>
-					<td><h5 style="color:red" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Password Error</h5></td>
-				</tr>
-				<tr>
-					<td colspan="3"><input type="submit" value="Submit"></td>
-				</tr>
-			</table>
-		</form>
-	</div>
+	
+	<body>
+		<div layout:fragment="content">
+            <div th:if="${param.error}">
+				 Invalid User Name or Password.
+            </div>
+			<form th:action="@{/login}" method="post">
+				<table>
+					<tr>
+						<td style="padding:5px">User Name:</td><td style="padding:5px"><input type="text" name="username" id="username" placeholder="UserName" required/></td>
+					</tr>
+					<tr>
+						<td style="padding:5px">Password:</td><td style="padding:5px"><input type="password" name="password" id="password" placeholder="Password" required/></td>
+					</tr>
+					<tr>
+						<td colspan="2" align="center"><input type="submit" value="Sign In" /></td>
+					</tr>
+				</table>
+   			 </form>
+			 
+ 		</div>	
+	</body>
 </html>
