--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -4,14 +4,12 @@
 
 <head>
 	<meta charset="ISO-8859-1">
-	<title>My Products</title>
+	<title>Products</title>
 </head>
 
 <body>
 	<div layout:fragment="content">
-		<a th:href="@{/enterProduct}">Add Products</a>
-		<a th:href="@{/updateProduct}">Update Product</a>
-		<a th:href="@{/deleteProduct}">Delete Product</a>
+		<a th:href="@{/enterProduct}">Add Product</a>
 		<table style="width:50%">
 			<thead>
 				<tr>
@@ -41,7 +39,6 @@
 				</tr>
 			</tbody>
 		</table>
-		<br />
 	</div>
 </body>
 
