--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -11,7 +11,7 @@
 			<tr>
 				<th style="text-align:center">ID</th>
 				<th style="text-align:center">Product ID</th>
-				<th style="text-align:center">Customer Name</th>
+				<th style="text-align:center">Customer ID</th>
 				<th style="text-align:center">Total</th>
 				<th style="text-align:center">Quantity</th>
 			<th>
