--- a/src/main/resources/templates/productsTest.html
+++ b/src/main/resources/templates/productsTest.html
@@ -9,7 +9,10 @@
 
 <body>
 	<div layout:fragment="content">
-		<a th:href="@{/enterProduct}">Add Product</a>
+		<form action="#" th:action="@{/enterProduct}" method="get">
+			<button type="submit">Add Product
+			</button>
+		</form>
 		<table style="width:50%">
 			<thead>
 				<tr>
@@ -23,9 +26,8 @@
 				<tr th:if="${productModel.empty}">
 					<td style="text-align:center" colspan="4">No Orders Available</td>
 				</tr>
-
 				<tr th:each="product : ${productModel}">
-					<form action="#" th:action="@{/product}" th:object="${product}" method="post">
+					<form th:action="@{/product}" th:object="${product}" method="post">
 						<button type="submit">
 							<table>
 								<tr>
@@ -45,7 +47,6 @@
 							</table>
 						</button>
 					</form>
-					<br />
 				</tr>
 			</tbody>
 		</table>
