--- a/src/main/resources/templates/deleteProduct.html
+++ b/src/main/resources/templates/deleteProduct.html
@@ -10,19 +10,9 @@
 <body>
 	<div layout:fragment="content">
 		<form action="#" th:action="@{/doDeleteProduct}" th:object="${productModel}" method="post">
-			<table>
-				<tr>
-					<td>Product ID :</td>
-					<td><input type="text" th:field="*{id}"></td>
-					<td>
-						<h5 style="color:red" th:if="${#fields.hasErrors('id')}" th:errors="*{id}">
-							Product ID Error</h5>
-					</td>
-				</tr>
-				<tr>
-					<td colspan="3"><input type="submit" value="Submit"></td>
-				</tr>
-			</table>
+			<h2>Are you sure you want to delete </h2>
+			<h2 th:text="${productModel.productName}">Product Name</h2>
+			<button type="submit">Yes</button>
 		</form>
 	</div>
 </body>
