--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -9,7 +9,10 @@
 
 <body>
 	<div layout:fragment="content">
-		<a th:href="@{/enterProduct}">Add Product</a>
+		<form action="#" th:action="@{/enterProduct}" method="get">
+			<button type="submit">Add Product
+			</button>
+		</form>
 		<table style="width:50%">
 			<thead>
 				<tr>
@@ -17,7 +20,7 @@
 					<th style="text-align:center">Product Name</th>
 					<th style="text-align:center">Price</th>
 					<th style="text-align:center">Quantity</th>
-					<th>
+				</tr>
 			</thead>
 			<tbody>
 				<tr th:if="${productModel.empty}">
@@ -28,13 +31,15 @@
 						<h5 th:text="${productModel.id}">ID</h5>
 					</td>
 					<td style="text-align:center">
-						<h5 th:text="${productModel.productName}">Product 1</h5>
+						<form th:object="${productModel.id}" th:action="@{/product}" method="post">
+							<button type="submit"><h5 th:text="${productModel.productName}"></h5></button>
+						</form>
 					</td>
 					<td style="text-align:center">
-						<h5 th:text="${productModel.price}">1.00</h5>
+						<h5 th:text="${productModel.price}">0.00</h5>
 					</td>
 					<td style="text-align:center">
-						<h5 th:text="${productModel.quantity}">1</h5>
+						<h5 th:text="${productModel.quantity}">0</h5>
 					</td>
 				</tr>
 			</tbody>
