--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -16,30 +16,31 @@
 		<table style="width:50%">
 			<thead>
 				<tr>
-					<th style="text-align:center">ID</th>
-					<th style="text-align:center">Product Name</th>
-					<th style="text-align:center">Price</th>
-					<th style="text-align:center">Quantity</th>
+					<th width="100px" style="text-align:center">ID</th>
+					<th width="500px" style="text-align:center">Product Name</th>
+					<th width="100px" style="text-align:center">Price</th>
+					<th width="100px" style="text-align:center">Quantity</th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr th:if="${productModel.empty}">
 					<td style="text-align:center" colspan="4">No Orders Available</td>
 				</tr>
-				<tr th:each="productModel : ${productModel}">
+				<tr th:each="product : ${productModel}">
 					<td style="text-align:center">
-						<h5 th:text="${productModel.id}">ID</h5>
+						<h5 th:text="${product.id}">ID</h5>
 					</td>
 					<td style="text-align:center">
-						<form th:object="${productModel.id}" th:action="@{/product}" method="post">
-							<button type="submit"><h5 th:text="${productModel.productName}"></h5></button>
+						<form action="#" th:action="@{product}" th:object="${productID}" method="post">
+							<input type="hidden" name="id" th:value="${product.id}" >
+							<button type="submit"><h5 th:text="${product.productName}">Product Name</h5></button>
 						</form>
 					</td>
 					<td style="text-align:center">
-						<h5 th:text="${productModel.price}">0.00</h5>
+						<h5 th:text="${product.price}">0.00</h5>
 					</td>
 					<td style="text-align:center">
-						<h5 th:text="${productModel.quantity}">0</h5>
+						<h5 th:text="${product.quantity}">0</h5>
 					</td>
 				</tr>
 			</tbody>
