--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -13,38 +13,39 @@
 			<button type="submit">Add Product
 			</button>
 		</form>
+		<br/>
 		<table style="width:50%">
-			<thead>
+			<table>
 				<tr>
 					<th width="100px" style="text-align:center">ID</th>
 					<th width="500px" style="text-align:center">Product Name</th>
 					<th width="100px" style="text-align:center">Price</th>
 					<th width="100px" style="text-align:center">Quantity</th>
 				</tr>
-			</thead>
-			<tbody>
-				<tr th:if="${productModel.empty}">
-					<td style="text-align:center" colspan="4">No Orders Available</td>
-				</tr>
-				<tr th:each="product : ${productModel}">
-					<td style="text-align:center">
-						<h5 th:text="${product.id}">ID</h5>
-					</td>
-					<td style="text-align:center">
-						<form action="#" th:action="@{product}" th:object="${productID}" method="post">
-							<input type="hidden" name="id" th:value="${product.id}" >
-							<button type="submit"><h5 th:text="${product.productName}">Product Name</h5></button>
-						</form>
-					</td>
-					<td style="text-align:center">
-						<h5 th:text="${product.price}">0.00</h5>
-					</td>
-					<td style="text-align:center">
-						<h5 th:text="${product.quantity}">0</h5>
-					</td>
-				</tr>
-			</tbody>
-		</table>
+			</table>
+			<tr th:each="product : ${productModel}">
+				<form action="#" th:action="@{product}" th:object="${productID}" method="post">
+					<input type="hidden" name="id" th:value="${product.id}">
+					<button type="submit">
+						<table>
+							<tr>
+								<td width="100px" style="text-align:center">
+									<h5 th:text="${product.id}">ID</h5>
+								</td>
+								<td width="500px" style="text-align:center">
+									<h5 th:text="${product.productName}">Product 1</h5>
+								</td>
+								<td width="100px" style="text-align:center">
+									<h5 th:text="${product.price}">1.00</h5>
+								</td>
+								<td width="100px" style="text-align:center">
+									<h5 th:text="${product.quantity}">1</h5>
+								</td>
+							</tr>
+						</table>
+					</button>
+				</form>
+			</tr>
 	</div>
 </body>
 
