--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -1,3 +1,4 @@
+3aaaaaaaa
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	layout:decorate="layouts/defaultTemplate">
@@ -15,11 +16,13 @@
 			<tr>
 				<td>
 					<form action="#" th:action="@{/updateProduct}" th:object="${productModel}" method="post"><input
-							type="submit" value="Update Product"></form>
+							type="hidden" name="id" th:value="${productModel.id}"><input type="submit"
+							value="Update Product"></form>
 				</td>
 				<td>
 					<form action="#" th:action="@{/deleteProduct}" th:object="${productModel}" method="post"><input
-							type="submit" value="Delete Product"></form>
+							type="hidden" name="id" th:value="${productModel.id}"><input type="submit"
+							value="Delete Product"></form>
 				</td>
 			</tr>
 		</table>
