Make sure update and delete work
also added an extra break tag for the footer to make it look better

--- a/src/main/resources/templates/updateProduct.html
+++ b/src/main/resources/templates/updateProduct.html
@@ -10,6 +10,7 @@
 <body>
 	<div layout:fragment="content">
 		<form action="#" th:action="@{/doUpdateProduct}" th:object="${productModel}" method="post">
+			<input type="hidden" name="id" th:value="${productModel.id}">
 			<table>
 				<tr>
 					<td>Product Name :</td>
