--- a/src/main/resources/templates/deleteProduct.html
+++ b/src/main/resources/templates/deleteProduct.html
@@ -10,6 +10,7 @@
 <body>
 	<div layout:fragment="content">
 		<form action="#" th:action="@{/doDeleteProduct}" th:object="${productModel}" method="post">
+			<input type="hidden" name="id" th:value="${productModel.id}">
 			<h2>Are you sure you want to delete </h2>
 			<h2 th:text="${productModel.productName}">Product Name</h2>
 			<button type="submit">Yes</button>
